using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Sensors
{
    public class SensorsConfig
    {
        public int A { get; set; }
        public int B { get; set; }
    }
}
